--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,8 +15,10 @@ h11==0.16.0
 httptools==0.6.4
 idna==3.10
 itsdangerous==2.2.0
+Jinja2==3.1.6
 kombu==5.5.4
 lazy-model==0.3.0
+MarkupSafe==3.0.2
 motor==3.7.1
 numpy==2.3.2
 packaging==25.0
